--- a/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
+++ b/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
@@ -35,6 +35,14 @@
 
     .main-navigation {
 
+      @include breakpoint(mobile) {
+        display: none;
+      }
+
+      @include breakpoint(tablet) {
+        display: block;
+      }
+
       .menu-toggle {
         display: none;
       }
