--- a/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
+++ b/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
@@ -1,8 +1,8 @@
 .site-header {
-  height: 5vh;
   width: 100%;
   z-index: 200;
   position: fixed;
+  transition: color 1s ease-in-out;
 
   .header-wrapper {
     display: flex;
@@ -29,7 +29,7 @@
 
       h1 {
         text-transform: uppercase;
-        line-height: 5vh;
+        padding: .8rem 0;
       }
     }
 
@@ -50,11 +50,10 @@
       .nav-menu {
         display: flex;
         list-style: none;
-        line-height: 5vh;
 
         .menu-item {
-          padding-right: 20px;
           position: relative;
+          padding: .8rem 1rem .8rem 0;
 
           &:hover::after {
             width: 80%;
