--- a/wordpress/wp-content/themes/architecture/scss/pages/about/_about-numbers.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/about/_about-numbers.scss
@@ -6,15 +6,34 @@
 
     .left-part-numbers {
       flex-basis: 30%;
-      background-image: url('./assets/about-number.jpg');
+      background-color: white;
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
       display: flex;
       flex-wrap: wrap;
+      background-image: url('./assets/about-number.jpg');
+      padding: .8rem;
 
       .number-titles {
         flex-basis: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: white;
+        padding: 1rem 0;
+
+        h1 {
+          font-size: 70px;
+          font-weight: bolder;
+        }
+
+        p {
+          font-size: 1rem;
+          font-weight: normal;
+          text-transform: uppercase;
+        }
       }
     }
 
@@ -23,13 +42,14 @@
       padding-left: 2rem;
 
       h2 {
-        color: $headingColor;
+        color: $sectionHeadingColor;
         font-size: 1.3rem;
       }
 
       h1 {
-        color: $headingColor;
+        color: $sectionHeadingColor;
         font-size: 40px;
+        padding: 1rem 0;
       }
 
       p {
