--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -1085,7 +1085,7 @@ a {
 .about-numbers .numbers-wrapper .left-part-numbers {
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
-  background-image: url("./assets/about-number.jpg");
+  background-color: white;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1094,11 +1094,39 @@ a {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  background-image: url("./assets/about-number.jpg");
+  padding: .8rem;
 }
 
 .about-numbers .numbers-wrapper .left-part-numbers .number-titles {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+  padding: 1rem 0;
+}
+
+.about-numbers .numbers-wrapper .left-part-numbers .number-titles h1 {
+  font-size: 70px;
+  font-weight: bolder;
+}
+
+.about-numbers .numbers-wrapper .left-part-numbers .number-titles p {
+  font-size: 1rem;
+  font-weight: normal;
+  text-transform: uppercase;
 }
 
 .about-numbers .numbers-wrapper .right-part-numbers {
@@ -1108,13 +1136,14 @@ a {
 }
 
 .about-numbers .numbers-wrapper .right-part-numbers h2 {
-  color: #fff;
+  color: #000;
   font-size: 1.3rem;
 }
 
 .about-numbers .numbers-wrapper .right-part-numbers h1 {
-  color: #fff;
+  color: #000;
   font-size: 40px;
+  padding: 1rem 0;
 }
 
 .about-numbers .numbers-wrapper .right-part-numbers p {
