--- a/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
+++ b/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
@@ -21,9 +21,12 @@
     }
 
     @include breakpoint(laptop) {
-      padding: 0;
+      padding: 0 5rem;
     }
 
+    @include breakpoint(desktop) {
+      padding: 0;
+    }
 
     .site-branding {
 
