--- a/wordpress/wp-content/themes/architecture/scss/pages/about/_about-hero.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/about/_about-hero.scss
@@ -7,26 +7,76 @@
   justify-content: center;
   align-items: center;
 
+  @include breakpoint(mobile) {
+    padding: 0 2rem;
+  }
+
+  @include breakpoint(smallTablet) {
+    padding: 0 3rem;
+  }
+
+  @include breakpoint(tablet) {
+    padding: 0 5rem;
+  }
+
+  @include breakpoint(laptop) {
+    padding: 0 5rem;
+  }
+
+  @include breakpoint(desktop) {
+    padding: 0;
+  }
+
   .about-hero-wrapper {
     display: flex;
     align-items: center;
     flex-direction: column;
 
     h3 {
-      font-size: 1.2vw;
       text-align: center;
       color: $headingColor;
       text-align: center;
       font-weight: normal;
       text-transform: uppercase;
       padding-bottom: 1.5rem;
+
+      @include breakpoint(mobile) {
+        font-size: 4vw;
+      }
+
+      @include breakpoint(tablet) {
+        font-size: 2.5vw;
+      }
+
+      @include breakpoint(laptop) {
+        font-size: 2vw;
+      }
+
+      @include breakpoint(desktop) {
+        font-size: 1.2vw;
+      }
     }
 
     h1 {
-      font-size: 2.5vw;
       text-align: center;
       color: $headingColor;
       font-weight: bold;
+
+      @include breakpoint(mobile) {
+        font-size: 7vw;
+      }
+
+      @include breakpoint(tablet) {
+        font-size: 4.5vw;
+      }
+
+      @include breakpoint(laptop) {
+        font-size: 3.5vw;
+      }
+
+      @include breakpoint(desktop) {
+        font-size: 2.5vw;
+      }
     }
   }
 
