--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -61,6 +61,12 @@ a {
 
 @media screen and (min-width: 1240px) {
   .site-footer {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .site-footer {
     padding: 0;
   }
 }
@@ -273,6 +279,12 @@ a {
 
 @media screen and (min-width: 1240px) {
   .site-header .header-wrapper {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .site-header .header-wrapper {
     padding: 0;
   }
 }
@@ -358,6 +370,12 @@ a {
 }
 
 @media screen and (min-width: 1240px) {
+  .hero {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
   .hero {
     padding: 0;
   }
@@ -447,6 +465,12 @@ a {
 }
 
 @media screen and (min-width: 1240px) {
+  .about {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
   .about {
     padding: 0;
   }
@@ -603,6 +627,12 @@ a {
 }
 
 @media screen and (min-width: 1240px) {
+  .projects {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
   .projects {
     padding: 0;
   }
@@ -1045,6 +1075,36 @@ a {
           align-items: center;
 }
 
+@media screen and (min-width: 320px) {
+  .about-hero {
+    padding: 0 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about-hero {
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .about-hero {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .about-hero {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .about-hero {
+    padding: 0;
+  }
+}
+
 .about-hero .about-hero-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1059,7 +1119,6 @@ a {
 }
 
 .about-hero .about-hero-wrapper h3 {
-  font-size: 1.2vw;
   text-align: center;
   color: #fff;
   text-align: center;
@@ -1068,11 +1127,88 @@ a {
   padding-bottom: 1.5rem;
 }
 
+@media screen and (min-width: 320px) {
+  .about-hero .about-hero-wrapper h3 {
+    font-size: 4vw;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .about-hero .about-hero-wrapper h3 {
+    font-size: 2.5vw;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .about-hero .about-hero-wrapper h3 {
+    font-size: 2vw;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .about-hero .about-hero-wrapper h3 {
+    font-size: 1.2vw;
+  }
+}
+
 .about-hero .about-hero-wrapper h1 {
-  font-size: 2.5vw;
   text-align: center;
   color: #fff;
   font-weight: bold;
+}
+
+@media screen and (min-width: 320px) {
+  .about-hero .about-hero-wrapper h1 {
+    font-size: 7vw;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .about-hero .about-hero-wrapper h1 {
+    font-size: 4.5vw;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .about-hero .about-hero-wrapper h1 {
+    font-size: 3.5vw;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .about-hero .about-hero-wrapper h1 {
+    font-size: 2.5vw;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .about-numbers {
+    padding: 0 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about-numbers {
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .about-numbers {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .about-numbers {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .about-numbers {
+    padding: 0;
+  }
 }
 
 .about-numbers .numbers-wrapper {
@@ -1083,9 +1219,9 @@ a {
 }
 
 .about-numbers .numbers-wrapper .left-part-numbers {
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
-  background-color: white;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  background-color: #fff;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1095,7 +1231,7 @@ a {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   background-image: url("./assets/about-number.jpg");
-  padding: .8rem;
+  padding: 1rem;
 }
 
 .about-numbers .numbers-wrapper .left-part-numbers .number-titles {
@@ -1114,13 +1250,14 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: white;
-  padding: 1rem 0;
+  background-color: #fff;
+  padding: 1.5rem 0;
 }
 
 .about-numbers .numbers-wrapper .left-part-numbers .number-titles h1 {
   font-size: 70px;
-  font-weight: bolder;
+  font-weight: bold;
+  color: #575757;
 }
 
 .about-numbers .numbers-wrapper .left-part-numbers .number-titles p {
@@ -1130,8 +1267,8 @@ a {
 }
 
 .about-numbers .numbers-wrapper .right-part-numbers {
-  -ms-flex-preferred-size: 70%;
-      flex-basis: 70%;
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
   padding-left: 2rem;
 }
 
@@ -1150,5 +1287,56 @@ a {
   line-height: 1.5;
   color: #7e7d7d;
   padding-bottom: 2rem;
+}
+
+@media screen and (min-width: 320px) {
+  .about-us {
+    padding: 0 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about-us {
+    padding: 0 3rem;
+  }
+}
+
+@media screen and (min-width: 980px) {
+  .about-us {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .about-us {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .about-us {
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .about-us {
+    padding: 0;
+  }
+}
+
+.about-us .about-us-wrapper {
+  padding: 2rem 0 8rem;
+}
+
+.about-us .about-us-wrapper h1 {
+  font-size: 3rem;
+  color: #000;
+}
+
+.about-us .about-us-wrapper p {
+  line-height: 1.5;
+  color: #7e7d7d;
+  font-size: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
