--- a/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
@@ -9,3 +9,6 @@
 @import './about/about-hero';
 @import './about/about-numbers';
 @import './about/about-us';
+
+//contact page
+@import './contact/contact-hero';
