Added content in contact form

--- a/wordpress/wp-content/themes/architecture/scss/pages/contact/_contact-hero.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/contact/_contact-hero.scss
@@ -1,12 +1,12 @@
-.contact {
+.contact-hero {
   background-image: linear-gradient(rgba(0,0,0,.6)),url('./assets/contact.jpg');
   background-size: cover;
   background-position: center center;
 
-  .contact-wrapper {
+  .contact-hero-wrapper {
     padding: 20rem 0;
 
-    .contact-title {
+    .contact-hero-title {
 
       h3 {
         text-align: center;
