--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -1403,18 +1403,18 @@ a {
   font-size: 1rem;
 }
 
-.contact {
+.contact-hero {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6))), url("./assets/contact.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.6)), url("./assets/contact.jpg");
   background-size: cover;
   background-position: center center;
 }
 
-.contact .contact-wrapper {
+.contact-hero .contact-hero-wrapper {
   padding: 20rem 0;
 }
 
-.contact .contact-wrapper .contact-title h3 {
+.contact-hero .contact-hero-wrapper .contact-hero-title h3 {
   text-align: center;
   color: #fff;
   text-align: center;
@@ -1424,56 +1424,89 @@ a {
 }
 
 @media screen and (min-width: 320px) {
-  .contact .contact-wrapper .contact-title h3 {
+  .contact-hero .contact-hero-wrapper .contact-hero-title h3 {
     font-size: 4vw;
   }
 }
 
 @media screen and (min-width: 980px) {
-  .contact .contact-wrapper .contact-title h3 {
+  .contact-hero .contact-hero-wrapper .contact-hero-title h3 {
     font-size: 2.5vw;
   }
 }
 
 @media screen and (min-width: 1240px) {
-  .contact .contact-wrapper .contact-title h3 {
+  .contact-hero .contact-hero-wrapper .contact-hero-title h3 {
     font-size: 2vw;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .contact .contact-wrapper .contact-title h3 {
+  .contact-hero .contact-hero-wrapper .contact-hero-title h3 {
     font-size: 1.2vw;
   }
 }
 
-.contact .contact-wrapper .contact-title h1 {
+.contact-hero .contact-hero-wrapper .contact-hero-title h1 {
   text-align: center;
   color: #fff;
   font-weight: bold;
 }
 
 @media screen and (min-width: 320px) {
-  .contact .contact-wrapper .contact-title h1 {
+  .contact-hero .contact-hero-wrapper .contact-hero-title h1 {
     font-size: 7vw;
   }
 }
 
 @media screen and (min-width: 980px) {
-  .contact .contact-wrapper .contact-title h1 {
+  .contact-hero .contact-hero-wrapper .contact-hero-title h1 {
     font-size: 4.5vw;
   }
 }
 
 @media screen and (min-width: 1240px) {
-  .contact .contact-wrapper .contact-title h1 {
+  .contact-hero .contact-hero-wrapper .contact-hero-title h1 {
     font-size: 3.5vw;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .contact .contact-wrapper .contact-title h1 {
+  .contact-hero .contact-hero-wrapper .contact-hero-title h1 {
     font-size: 2.5vw;
   }
+}
+
+.contact-form .contact-wrapper {
+  padding: 5rem 0 8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.contact-form .contact-wrapper .left-part-contact {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.contact-form .contact-wrapper .left-part-contact h3 {
+  color: #000;
+  font-size: 1.3rem;
+}
+
+.contact-form .contact-wrapper .left-part-contact h1 {
+  color: #000;
+  font-size: 40px;
+  padding: .7rem 0;
+}
+
+.contact-form .contact-wrapper .left-part-contact p {
+  color: #7e7d7d;
+  line-height: 1.5;
+}
+
+.contact-form .contact-wrapper .right-part-contact {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
 }
 /*# sourceMappingURL=style.css.map */
