Added project page

--- a/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
@@ -13,3 +13,7 @@
 //contact page
 @import './contact/contact-hero';
 @import './contact/contact-form';
+
+
+//projects
+@import './projects/hero-projects';
