Added blog items, add single page item

--- a/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
@@ -3,6 +3,8 @@
 
 // blog page
 @import './blog/heroblog';
+@import './blog/blogitems';
+@import './blog/components/blog-btn';
 
 
 //about page
@@ -17,3 +19,4 @@
 
 //projects
 @import './projects/hero-projects';
+
