--- a/wordpress/wp-content/themes/architecture/scss/pages/blog/_heroblog.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/blog/_heroblog.scss
@@ -1,17 +1,13 @@
 .blog-hero {
-  height: 60vh;
-  background-position: center center;
+  height: 70vh;
   background-size: cover;
   background-repeat: no-repeat;
-  position: relative;
+  background-image: url('./assets/blog.jpg');
 
   .blog-hero-wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
 
     .blog-title {
+      padding: 15rem 0;
 
       h3 {
         color: $headingColor;
@@ -21,6 +17,7 @@
       h1 {
         color: $headingColor;
         font-size: 40px;
+        text-align: center;
       }
     }
   }
